--- a/packages/gui-chat/src/assets/css/dropup.css
+++ b/packages/gui-chat/src/assets/css/dropup.css
@@ -19,7 +19,7 @@
     left: 0;
     border: 1px solid rgba(128, 128, 128, 0.2);
     border-radius: 4px;
-    background-color: var(--vscode-dropdown-background, #f5f5f5);
+    background-color: var(--vscode-sideBar-background, #f2f2f2);
 }
 
 .dropup-list {
@@ -27,7 +27,7 @@
     margin: 0;
     list-style: none;
     max-height: 295px;
-    max-width: calc(100vw - 60px);
+    max-width: calc(100vw - 40px);
     overflow-y: auto;
     scrollbar-width: thin;
 }
@@ -40,6 +40,12 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+}
+
+.dropup-list li span{
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .dropup-list li:hover {
