refactor(gui-control): 创建 GUI 控制面板
- 添加了 ControlPanel 和 PredictionPanel 组件
- 更新了主布局结构，使用 vscode-tabs 组件

--- a/packages/gui-control/src/assets/main.css
+++ b/packages/gui-control/src/assets/main.css
@@ -1,35 +1,69 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+html {
+    box-sizing: border-box;
+    font-size: 13px;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+body {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    font-weight: normal;
+    background-color: var(--vscode-sideBar-background, #f2f2f2);
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+p {
+    margin: 0;
+    padding: 0;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+img {
+    max-width: 100%;
+    height: auto;
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+*:focus {
+	outline-color: var(--vscode-focusBorder) !important;
+}
+
+a {
+	color: var(--vscode-textLink-foreground);
+}
+
+a:hover,
+a:active {
+	color: var(--vscode-textLink-activeForeground);
+}
+
+code {
+	/* font-size: var(--vscode-editor-font-size); */
+	font-family: var(--vscode-editor-font-family);
+}
+
+button {
+	border: none;
+	padding: var(--input-padding-vertical) var(--input-padding-horizontal);
+	width: 100%;
+	text-align: center;
+	outline: 1px solid transparent;
+	outline-offset: 2px !important;
+	color: var(--vscode-button-foreground, #ffffff);
+	background: var(--vscode-button-background, #705697);
+}
+
+button:hover {
+	cursor: pointer;
+	background: var(--vscode-button-hoverBackground, #5a4579);
+}
+
+button:focus {
+	outline-color: var(--vscode-focusBorder);
+}
+
+button.secondary {
+	color: var(--vscode-button-secondaryForeground);
+	background: var(--vscode-button-secondaryBackground);
+}
+
+button.secondary:hover {
+	background: var(--vscode-button-secondaryHoverBackground);
 }
